# modern-cpp-exercises

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
modern-cpp-exercises/: main.cpp
modern-cpp-exercises.xcodeproj/: project.pbxproj
modern-cpp-exercises.xcodeproj/xcuserdata/sebastian.xcuserdatad/xcschemes/: xcschememanagement.plist
modern-cpp-exercises/cpp23/: cpp23-001-optional-par-in-lambdas.cpp  cpp23-001-optional-par-in-lambdas.h
